Add padding for terminal_tutorial_activity.xml
#227

--- a/manager/src/main/res/layout/terminal_tutorial_activity.xml
+++ b/manager/src/main/res/layout/terminal_tutorial_activity.xml
@@ -11,6 +11,7 @@
     app:borderTopVisibility="whenTop">
 
     <LinearLayout
+        android:id="@android:id/content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:clipChildren="false"
