--- a/manager/src/main/res/layout/home_start_adb.xml
+++ b/manager/src/main/res/layout/home_start_adb.xml
@@ -32,13 +32,13 @@
 
     <TextView
         android:id="@android:id/text1"
-        style="@style/CardSummary"
+        style="@style/CardContent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="24dp"
-        tools:htmlText="@string/home_adb_description" />
+        tools:text="@string/home_adb_description" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@android:id/button1"
