--- a/manager/src/main/res/layout/home_start_root.xml
+++ b/manager/src/main/res/layout/home_start_root.xml
@@ -35,7 +35,7 @@
 
     <TextView
         android:id="@android:id/text1"
-        style="@style/CardSummary"
+        style="@style/CardContent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
