--- a/manager/src/main/res/values/themes_overlay.xml
+++ b/manager/src/main/res/values/themes_overlay.xml
@@ -6,6 +6,7 @@
         <item name="android:colorPrimary">@android:color/black</item>
         <item name="android:colorPrimaryDark">@android:color/black</item>
         <item name="android:colorBackground">@android:color/black</item>
+        <item name="colorSurface">@android:color/black</item>
     </style>
 
     <style name="ThemeOverlay.DynamicColors.Light" parent="ThemeOverlay.Material3.DynamicColors.Light.Rikka"/>
