--- a/manager/src/main/res/layout/home_start_adb.xml
+++ b/manager/src/main/res/layout/home_start_adb.xml
@@ -11,14 +11,12 @@
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
-        <moe.shizuku.manager.widget.MaterialCircleIconView
+        <ImageView
             android:id="@android:id/icon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/CardIcon"
             android:duplicateParentState="true"
             android:importantForAccessibility="no"
-            android:src="@drawable/ic_adb_24dp"
-            app:iconColorName="teal" />
+            android:src="@drawable/ic_adb_24dp" />
 
         <TextView
             style="@style/CardTitle"
