--- a/manager/src/main/res/layout/home_terminal.xml
+++ b/manager/src/main/res/layout/home_terminal.xml
@@ -6,14 +6,12 @@
     android:gravity="center_vertical"
     android:orientation="horizontal">
 
-    <moe.shizuku.manager.widget.MaterialCircleIconView
+    <ImageView
         android:id="@android:id/icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/CardIcon"
         android:duplicateParentState="true"
         android:importantForAccessibility="no"
-        android:src="@drawable/ic_terminal_24"
-        app:iconColorName="deep_purple" />
+        android:src="@drawable/ic_terminal_24" />
 
     <LinearLayout
         android:layout_width="match_parent"
