--- a/manager/src/main/res/layout/home_learn_more.xml
+++ b/manager/src/main/res/layout/home_learn_more.xml
@@ -1,18 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     style="?homeCardStyle"
     android:gravity="center_vertical"
     android:orientation="horizontal">
 
-    <moe.shizuku.manager.widget.MaterialCircleIconView
+    <ImageView
         android:id="@android:id/icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/CardIcon"
         android:duplicateParentState="true"
         android:importantForAccessibility="no"
-        android:src="@drawable/ic_learn_more_24dp"
-        app:iconColorName="blue_grey" />
+        android:src="@drawable/ic_learn_more_24dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
