--- a/manager/src/main/res/layout/home_start_root.xml
+++ b/manager/src/main/res/layout/home_start_root.xml
@@ -13,14 +13,12 @@
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
-        <moe.shizuku.manager.widget.MaterialCircleIconView
+        <ImageView
             android:id="@android:id/icon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/CardIcon"
             android:duplicateParentState="true"
             android:importantForAccessibility="no"
-            android:src="@drawable/ic_root_24dp"
-            app:iconColorName="orange" />
+            android:src="@drawable/ic_root_24dp" />
 
         <TextView
             android:id="@android:id/title"
